- added new variable types to use better the memory VarShort, VarFloat - implement the groupby feature and basic aggregations with the structure - implement a draft revision of relieff feature selection algorithm